force-app/main/default/objects/Deployment_Result__c/Deployment_Result__c.object-meta.xml
<CustomObject>
    <label>Deployment Result</label>
    <nameField>
        <displayFormat>DRN-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Deployment Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>