force-app/main/default/objects/Deployment_Result__c/fields/Metadata_Log__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Log__c</fullName>
    <label>Metadata Log</label>
    <referenceTo>Metadata_Log__c</referenceTo>
    <relationshipLabel>Deployment Results</relationshipLabel>
    <relationshipName>Component_Result</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>