force-app/main/default/objects/Deployment_Result__c/fields/Post_Deployment_Change__c.field-meta.xml
<CustomField>
    <fullName>Post_Deployment_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Deployment Change</label>
    <type>Checkbox</type>
</CustomField>