force-app/main/default/objects/Deployment_Result__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CREATED</fullName>
            </value>
            <value>
                <fullName>UPDATED</fullName>
            </value>
            <value>
                <fullName>DELETED</fullName>
            </value>
            <value>
                <fullName>NO CHANGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>